<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/backButton"
                style="@style/CommonButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/toolbarTitle"
                android:contentDescription="@string/toolbar_backButton_description"
                android:src="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/toolbarTitle"
                style="@style/ToolbarTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:text="@string/app_name" />

            <ImageButton
                android:id="@+id/logoutButton"
                style="@style/CommonButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/toolbarTitle"
                android:contentDescription="@string/toolbar_logoutButton_description"
                android:src="@drawable/logout" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/toolbar_shadow" />

</RelativeLayout>